# hass-mcp

./: Cargo.toml  README.md  schemas.yaml
src/: main.rs
