[package]
name = "hass-mcp"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "a full-featured mcp server for home assistant"

[dependencies]
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk.git", branch = "main", features = [
    "server",
    "transport-sse-server",
    "transport-io",
    "transport-streamable-http-server",
    "auth",
] }
tokio = { version = "1", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "io-std",
    "signal",
] }
tokio-util = { version = "0.7", features = ["rt"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "std",
    "fmt",
] }
futures = "0.3"
axum = { version = "0.8", features = ["macros"] }
serde_yaml = "0.9"
fuzzy-matcher = "0.3.7"
reqwest = { version = "0.12.19", features = ["json"] }
tokio-tungstenite = "0.26.2"
futures-util = "0.3.31"
clap = { version = "4.0", features = ["derive"] }
schemars = "0.9"
chrono = { version = "0.4", features = ["serde"] }
strum = { version = "0.27.1", features = ["derive"] }
strum_macros = "0.27.1"
url = { version = "2.5", features = ["serde"] }
